Added save and load model code

--- a/notebooks/CNN_LSTM_Baseline.ipynb
+++ b/notebooks/CNN_LSTM_Baseline.ipynb
@@ -529,6 +529,31 @@
         "\n",
         "    return decoded_list\n",
         "\n",
+        "def save_model(model, optimizer, scheduler, metric, epoch, path):\n",
+        "    torch.save(\n",
+        "        {'model_state_dict'         : model.state_dict(),\n",
+        "         'optimizer_state_dict'     : optimizer.state_dict(),\n",
+        "         'scheduler_state_dict'     : scheduler.state_dict(),\n",
+        "         metric[0]                  : metric[1],\n",
+        "         'epoch'                    : epoch},\n",
+        "         path\n",
+        "    )\n",
+        "\n",
+        "def load_model(path, model, metric= 'valid_acc', optimizer= None, scheduler= None):\n",
+        "\n",
+        "    checkpoint = torch.load(path)\n",
+        "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+        "\n",
+        "    if optimizer != None:\n",
+        "        optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+        "    if scheduler != None:\n",
+        "        scheduler.load_state_dict(checkpoint['scheduler_state_dict'])\n",
+        "\n",
+        "    epoch   = checkpoint['epoch']\n",
+        "    metric  = checkpoint[metric]\n",
+        "\n",
+        "    return [model, optimizer, scheduler, epoch, metric]\n",
+        "\n",
         "def evaluate(model, data_loader, device):\n",
         "    model.eval()\n",
         "    total_distance = 0\n",
@@ -619,7 +644,9 @@
         "        val_cer = evaluate(model, val_loader, device)\n",
         "        print(f'Validation CER: {val_cer:.4f}')\n",
         "\n",
-        "        batch_bar.close()\n"
+        "        batch_bar.close()\n",
+        "\n",
+        "    save_model(model, optimizer, scheduler, ['valid_dist', val_cer], epoch, \"cnn-lstm-model.pth\")\n"
       ]
     },
     {
